openldap-ton/virtualservice.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: openldap-ltb-passwd
  namespace: openldap
spec:
  hosts:
    - ssl-ldap.lag0.com.br
  gateways:
    - istio-system/lag0-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: openldap-ltb-passwd
            port:
              number: 80
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: openldap-phpldapadmin
  namespace: openldap
spec:
  hosts:
    - phpldapadmin.lag0.com.br
  gateways:
    - istio-system/lag0-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: openldap-phpldapadmin-service
            port:
              number: 80
